[workspace]
resolver = "2"
members = [
  "oracle",
  "runtime",
  "vault",
  "bitcoin",
  "faucet",
  "runner",
  "testutil",
]

[patch.crates-io]
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }

[patch."https://github.com/paritytech/substrate"]
frame-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-inherents = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-weights = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
